tests/testData/annotation/declaration_missing_assignment.wdl
version draft-3
workflow foo {
  <error descr="Immediate assignment required for non-input declaration [draft-3]">Int i</error>
}
